--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "local": "serverless offline",
+    "local": "serverless offline --noAuth",
     "deploy": "sls deploy --verbose"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Santiago Tapasco Giraldo",
+    "email": "santy1446@gmail.com"
+  },
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1459.0",
+    "jwt-decode": "^3.1.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
